traces/bug_62.txt
examples++-load/MetricKuate.cpp:428: error: DEAD_STORE
  The value written to &EPS (type double) is never used.
Showing all 1 steps of the trace


examples++-load/MetricKuate.cpp:428:5: Write of unused value
426.   			 B=bik;
427.   			 C=cik;
428.   			 EPS=epsilon0;
           ^
429.   		       }
430.   		     
